packages/typ/tests/fixtures/diagnostics/0259_fun_locally_abstract_mismatch_02.ml.infer.expected
File "0259_fun_locally_abstract_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0259_fun_locally_abstract_mismatch_02 is not a valid module name.

File "0259_fun_locally_abstract_mismatch_02.ml", line 1, characters 38-39:
1 | let bad_beta (type a) (x : a) : int = x
                                          ^
Error: The value x has type a but an expression was expected of type int
